fixed clipping issue on radius corners of filter

--- a/app/assets/stylesheets/filters.scss
+++ b/app/assets/stylesheets/filters.scss
@@ -44,7 +44,7 @@
 }
 
 .select2-dropdown--below {
-  top: -1.70rem; /*your input height*/
+  top: -1.5rem; /*your input height*/
 }
 
 .select2-container--default .select2-results > .select2-results__options {
